fixed h1 margin-top to align with top of parallax scroll

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 h1 {
   font-size: 30px;
   color: lightgray;
-  margin-top: 5px;
+  margin-top: 20px;
 }
 
 h2 {
